<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#FFFFFF"
    android:id="@+id/new_loan_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_fill_in_the_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/fill_in_the_form"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_amount_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/amount_text"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_fill_in_the_form" />

        <TextView
            android:id="@+id/tv_amount_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="1000000"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/tv_amount_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_fill_in_the_form" />

        <SeekBar
            android:id="@+id/sb_loan_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_text" />

        <TextView
            android:id="@+id/tv_percent_text"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/percent_for_amount_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sb_loan_amount" />

        <TextView
            android:id="@+id/tv_percent_sum"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            app:layout_constraintStart_toEndOf="@id/tv_percent_text"
            app:layout_constraintTop_toBottomOf="@+id/sb_loan_amount" />

        <TextView
            android:id="@+id/tv_percent_sign"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            app:layout_constraintStart_toEndOf="@id/tv_percent_sum"
            app:layout_constraintTop_toBottomOf="@+id/sb_loan_amount" />

        <TextView
            android:id="@+id/tv_loan_term_text"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/loan_term_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_percent_text" />

        <TextView
            android:id="@+id/tv_loan_term_sum"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="31"
            app:layout_constraintStart_toEndOf="@+id/tv_loan_term_text"
            app:layout_constraintTop_toBottomOf="@+id/tv_percent_text" />

        <TextView
            android:id="@+id/tv_enter_name"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/enter_name_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_loan_term_text" />

        <EditText
            android:id="@+id/et_enter_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/first_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_name" />

        <TextView
            android:id="@+id/tv_enter_last_name"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/enter_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_first_name" />

        <EditText
            android:id="@+id/et_enter_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="@string/last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_last_name" />

        <TextView
            android:id="@+id/tv_enter_phone_number"
            style="@style/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/enter_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_last_name" />

        <EditText
            android:id="@+id/et_enter_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:hint="+79001112233"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_enter_phone_number" />

        <Button
            android:id="@+id/button_send_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/send_request"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_enter_phone_number" />

        <FrameLayout
            android:id="@+id/loadingLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_shadow_start_color"
            android:visibility="gone"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>